; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/callback/extr_calldata.c_cd_serialize_size.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/callback/extr_calldata.c_cd_serialize_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32**)* @cd_serialize_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cd_serialize_size(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i64, align 8
  store i32** %0, i32*** %2, align 8
  store i64 0, i64* %3, align 8
  %4 = load i32**, i32*** %2, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @memcpy(i64* %3, i32* %5, i32 8)
  %7 = load i32**, i32*** %2, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 8
  store i32* %9, i32** %7, align 8
  %10 = load i64, i64* %3, align 8
  ret i64 %10
}

declare dso_local i32 @memcpy(i64*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
